# stufio-modules-profiling

./: README.md  pyproject.toml
docs/: query_profiling.md  query_profiling_usage.md
stufio/modules/profiling/: __init__.py  config.py  decorators.py  module.py
stufio/modules/profiling/api/: __init__.py  metrics.py
stufio/modules/profiling/api/v1/: query_profiles.py
stufio/modules/profiling/middleware/: __init__.py  profiling_middleware.py  prometheus_middleware.py  query_profiling_middleware.py
stufio/modules/profiling/migrations/v20250429/: 01_create_query_profiles_table.py  02_create_query_profiles_materialized_view.py
stufio/modules/profiling/models/: __init__.py  query_profile.py
stufio/modules/profiling/services/: __init__.py  query_profiler.py  telemetry.py
